# rcarla

./: .gitignore  README.md  docker-compose.yml
.docker_utils/: Dockerfile  parse_ros2_params.py  ros_entrypoint.sh
cfg/: config.yaml
digital_twin_creator/: config.yaml  digital_twin_creator.py  pcd_wrapper.py  requirements.txt  setup.sh
drive_interface/: CMakeLists.txt  package.xml
drive_interface/src/drive_interface/: drive_interface.py  physics_interface.py
interfaces/drive_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
interfaces/drive_interface/src/drive_interface/: drive_interface.py  dynamics_model.py  physics_interface.py
interfaces/rcarla_bringup/: CMakeLists.txt  package.xml
interfaces/rcarla_bringup/launch/: rcarla.launch  rcarla.launch.py
interfaces/rcarla_msgs/: CMakeLists.txt  package.xml
interfaces/rcarla_msgs/srv/: ImuUpdate.srv  OdomUpdate.srv  PhysicsInit.srv  PhysicsStep.srv
interfaces/sensors_interface/: CMakeLists.txt  package.xml  setup.py
interfaces/sensors_interface/src/sensors_interface/: imu.py  wheel_odom.py
interfaces/traffic_interface/: CMakeLists.txt  package.xml  setup.py
interfaces/traffic_interface/maps/f1tenth/: global_waypoints.json  waypoints.json
interfaces/traffic_interface/maps/gokart_map/: waypoints.json
interfaces/traffic_interface/src/traffic_interface/: traffic_interface.py
rcarla_bringup/launch/: rcarla.launch  rcarla.launch.py
traffic_interface/: CMakeLists.txt  setup.cfg
traffic_interface/src/traffic_interface/: traffic_interface.py
