<?xml version="1.0"?>
<package format="3">
  <name>drive_interface</name>
  <version>0.0.1</version>
  <description>The drive_interface package</description>
  <maintainer email="maubrunn@ethz.ch">Maurice Brunner</maintainer>
  <license>MIT</license>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>carla_common</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>carla_manual_control</exec_depend>

  <exec_depend>ros_compatibility</exec_depend>

  <exec_depend>python3-transforms3d</exec_depend>

  <!-- ROS 2 DEPENDENCIES-->
  <depend condition="$ROS_VERSION == 2">rclpy</depend>

  <!-- ROS 1 DEPENDENCIES-->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">roslaunch</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
